--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="dial.css" />
 		<script src = "js/rotarydial.js"></script>
 	</head>
 	<body>
