--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			Value Changing = 
 			<span id = "valueChanging">
 		</div>	
+		<div>
 			Value Changed = 
 			<span id = "valueChanged">
 		</div>
