--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<link rel="stylesheet" type="text/css" href="dial.css" />
 		<script src = "js/rotarydial.js"></script>
 	</head>
-	<body>
+	<body style="margin:auto">
 		<div id = "dialdiv">
 		</div>
 		<div>
